Ant based solution for mr-jars.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>